To align with github
# Conflicts:
#	dist/securityquoteload.mxt